--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="../assets/style/reset.css">
-  <link rel="stylesheet" href="../assets/js/spell_checker.min.js">
-  <title>React and Webpack4</title>
+  <title>ОКАН</title>
 </head>
 
 <body>
